# midas

./: .github-setup.md  .gitignore  AGENTS.md  BREAKTHROUGH.md  CLAUDE.md  CRITICAL_FINDING.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_STATUS.md  INTEGRATION.md  LICENSE  NOTES.md  PHASE2_COMPLETE.md  PHASE3_PROGRESS.md  PUSH_TO_GITHUB.txt  README.md  READY_TO_PUSH.md  STATUS.md  SUCCESS.md  SUMMARY.md  TEST_RESULTS.md  USAGE.md  analyze-loop.sh  build-check.sh  fix-unicorn-api.sh  test-build.sh
.github/workflows/: ci.yml
docs/: CHARTER.md  DEV-VELOCITY-REVIEW.md  DEVIRT.md  FINDINGS-M3-import-wall.md  RUN-LOG-2026-07-08.md  SAMPLE-PROTECTION.md  SPEAKEASY_IDEAS.md  WORKFLOW.md
docs/controls/: kernel32-with-getcommandlinea.txt  kernel32-with-getcurrentprocess.txt  kernel32-with-getcurrentthread.txt  kernel32-with-widechar.txt  kernel32-without-widechar.txt  user32-with-createwindowa.txt  user32-with-createwindoww.txt
examples/: probe_sample.rs  run_loader.rs  trace_child_postmortem.rs  trace_resolution.rs  trace_slot.rs  trap_postmortem.rs  watch_peb_teb.rs
samples/: SAMPLES.md
src/: cpu_features.rs  emu.rs  ir.rs  kernel32_exports.txt  lib.rs  main.rs  msvcrt_exports.txt  oep.rs  pe.rs  result.rs  trace.rs  tracer.rs  unpacker.rs  win64.rs
src/devirt/: mod.rs  oep_dump.rs  trace.rs  trace_events.rs
src/emu/: engine.rs  hooks.rs  mod.rs  state.rs
src/pe/: dumper.rs  loader.rs  mod.rs  parser.rs
src/themida/: detector.rs  iat.rs  mod.rs  oep.rs
src/utils/: disasm.rs  mod.rs  pattern.rs
src/vm/: detect.rs  mod.rs
src/win64/: ldr.rs  mod.rs  peb.rs  (+1 more)
(+15 files in other folders)
